--- a/app/Templates/DashboardTemplate.html.twig
+++ b/app/Templates/DashboardTemplate.html.twig
@@ -15,7 +15,7 @@
 					<ul>
 						<li><a href="#">Home</a></li>
 						<li><a href="/trajet/create">Create Trajet</a></li>
-						<li><a href="#">Profile</a></li>
+						<li><a href="/profile">Profile</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="/logout">Logout</a></li>
 					</ul>
